# Knowledge-Intelligence-System

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
app/: config.py  main.py
app/models/: vector_store.py
app/services/: LLMAdvanced.py  llm_service.py  storage_service.py
app/static/: style.css
app/templates/: index.html
vector_db/: chroma.sqlite3
