[project]
name = "knowledge-intelligence-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.34",
    "chromadb>=1.5.9",
    "flask>=3.1.3",
    "langchain>=1.3.10",
    "openai>=2.43.0",
    "pypdf>=6.13.3",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
    "unstructured>=0.23.1",
    "werkzeug>=3.1.8",
]
