[project]
name = "knowledge-intelligence-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3==1.28.0",
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "flask==2.3.3",
    "langchain==0.0.267",
    "openai==0.28.0",
    "pypdf==3.9.0",
    "python-dotenv>=0.21.0",
    "tiktoken>=0.7.0",
    "unstructured==0.10.30",
    "werkzeug==2.3.7",
]
